$Id: NEWS,v 1.1053 2009-08-06 16:58:37 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 3263 - Supplying option SFTPRekey timeout parameter causes segmentation
  fault.
- Bug 3265 - SFTP requests are logged to ExtendedLog without regard to classes.
- Bug 2758 - ProFTPD doesn't always pay attention to AccessDenyMsg.
- Bug 3266 - Support "implicit" FTPS.
- Bug 2070 - AuthAliasOnly off in <Global> section kills anonymous logins.
- Bug 3268 - Files whose names start with whitespace are not listed properly.
- Bug 1908 - ExtendedLog to work properly in <Anonymous> context.
- Bug 3269 - RewriteCondition OR/ornext flag does not work.
- Bug 3254 - NLST/LIST and symbolic link problem.
- Bug 3272 - Avoid encoding if to/from charsets are the same.
- Bug 3274 - Timestamp formatting in TransferLog needs padded day-of-month.
- Bug 3270 - Lost connections to databases not correctly handled.  This
  also adds support for a new "noReconnect" SQLOption.
- Bug 3275 - Improper SSL/TLS certificate subjectAltName verification.

1.3.3rc1 - Released 30-Jun-2009
--------------------------------
- Bug 1801 - Faulty SQLConnectInfo PERCALL policy - connections not closed
  after each call.
- Bug 2894 - Deprecate the AnonymousGroup directive.
- Bug 3123 - Use PQescapeStringConn() rather than PQescapeString().
- Bug 3133 - mod_facts should advertise TVFS support in the FEAT response.
- Bug 3128 - mod_sql_sqlite should use transactions for INSERT/UPDATE
  statements.
- Bug 3155 - Change the IdentLookups default to 'off'.  The RFC1413 IDENT
  lookup adds latency to the login process, so much so that it is a FAQ